# Are-u-done

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
app/: __init__.py  assessment.py  config.py  db.py  llm.py  main.py  onboarding.py  schemas.py  services.py  worker.py
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_initial.sql  002_onboarding.sql  003_reminder_safety.sql  004_reset_generated_goals.sql  005_task_assessment.sql  006_reset_outbox_dependencies.sql  007_reminder_hours.sql
tests/: test_contracts.py  test_messaging.py
whatsapp_life_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
